text-align/pic-fixing
text-align/pic-fixing

--- a/client/src/component/route/HomePage/homePage.css
+++ b/client/src/component/route/HomePage/homePage.css
@@ -112,7 +112,7 @@ button {
   bottom: 12%;
   background-size: cover;
   background-position: center;
-  background-image: url("../../../../public/images/working-picture.jpg");
+  background-image: url("../../../../public/images/selfie.jpg");
   width: 90%;
   height: 75%;
   overflow: hidden;
@@ -164,6 +164,8 @@ button {
   text-decoration: underline;
   border-top: 0.5px inset #aba8a7;
   border-right: 0.5px outset #aba8a7;
+  text-align: left;
+
   /* align-self: flex-end; */
 }
 .highlighter {
@@ -174,10 +176,12 @@ button {
   font-family: "Courier New", Courier, monospace;
   color: white;
   font-size: 16px;
-  padding: 64px;
+  padding: 48px;
   /* text-decoration: underline; */
   border-top: 0.5px inset #aba8a7;
   border-right: 0.5px outset #aba8a7;
+  text-align: left;
+  line-height: 1.5;
 }
 h1 {
   font-size: 24px;
@@ -258,6 +262,7 @@ img:hover {
   font-family: "Courier New", Courier, monospace;
   color: #f2dd1f;
   font-weight: bold;
+  text-align: left;
 }
 .service-section {
   display: flex;
