--- a/client/src/component/route/Resume/Resume.css
+++ b/client/src/component/route/Resume/Resume.css
@@ -77,7 +77,7 @@
   bottom: 12%;
   background-size: cover;
   background-position: center;
-  background-image: url("../../../../public/images/working-picture.jpg");
+  background-image: url("../../../../public/images/selfie.jpg");
   width: 90%;
   height: 75%;
   overflow: hidden;
